# NeuroEvolution

./: .gitignore  CMakeLists.txt  EXPLORATION.md  README.md  ROADMAP.md  pyproject.toml
experiments/: fitness_search.example.json
include/neuroevo/: brain.hpp  environment.hpp  evolution.hpp  fitness.hpp  neat.hpp  nsga2.hpp  objectives.hpp  random.hpp  sensorimotor.hpp  task.hpp  vector2.hpp
scripts/: build.ps1  search.ps1  visualize.ps1
src/: brain.cpp  environment.cpp  evolution.cpp  fitness.cpp  main.cpp  neat.cpp  nsga2.cpp  objectives.cpp  sensorimotor.cpp  task.cpp
tests/: mechanics.cpp  neat_nsga2.cpp  sensorimotor.cpp  smoke.cpp
tools/: hypersearch.py  plot_run.py  view_pareto_front.py  view_run.py
